Fixed issue with Audio not showing anything.

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -162,6 +162,9 @@ $romper-hover-text-size: 25px;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: 30%;
+    height: 100%;
+    position: absolute;
+    width: 100%;
   }
 
   .romper-text-element {
